# authoric

./: Cargo.toml  README.md  to-check
docs/: cli.md  defaults.md  dependencies.md  routes.md  structure.drawio
docs/flowcharts/: post_users.drawio
migrations/: 0001_initial_structure.sql  0002_add_login_session_tokens.sql  0003_correct_events_table.sql  0004_add_event_keys.sql  0005_split_events_into_separate_tables.sql  0006_delete_login_session_status.sql
src/: main.rs
src/cli/: mod.rs
src/cli/subcommands/: mod.rs
src/cli/subcommands/admin/: mod.rs
src/cli/subcommands/config/: mod.rs
src/cli/subcommands/daemon/: mod.rs
src/cli/subcommands/run/: mod.rs
src/config/: mod.rs
src/models/: event.rs  group.rs  login_session.rs  mod.rs  permission.rs  user.rs
src/models/event/: mod.rs  user_delete.rs  user_login.rs  user_register.rs
src/util/: io.rs  logging.rs  mod.rs  string.rs
src/web/: mod.rs
src/web/controllers/: mod.rs
src/web/controllers/events/: cancel.rs  commit.rs  mod.rs
src/web/controllers/groups/: delete.rs  grant_permission.rs  insert.rs  list.rs  mod.rs  revoke_permission.rs
src/web/controllers/permissions/: delete.rs  insert.rs  list.rs  mod.rs
src/web/controllers/users/: delete.rs  get.rs  get_permission.rs  grant_group.rs  insert.rs  login.rs  logout.rs  mod.rs  revoke_group.rs
src/web/controllers/users/event/: mod.rs
src/web/controllers/users/event/delete/: cancel.rs  commit.rs  create.rs
src/web/controllers/users/event/login/: cancel.rs  (+2 more)
src/web/routes/: event.rs  groups.rs  mod.rs  permissions.rs  user.rs
(+4 files in other folders)
